# screen_ruler

./: .gitignore  .hgignore  AUTHORS  README  about.cpp  about.h  bitbucket-pipelines.yml  build.py  changelog.md  color_button.py  configurations.cpp  configurations.h  configure.ac  draw.cpp  draw.h  license.txt  main.cpp  main.h  main.py  my_spin_button.cpp  my_spin_button.h  options.cpp  options.h  options_window.py  package.json  package.py  readme.md  requirements.txt  screen_ruler.cpp  screen_ruler.h  secondary_window.cpp  secondary_window.h  setup.py  size_grip.py
.github/workflows/: build.yml
images/: icon.icns
screen_ruler_cpp_gtk/: Makefile.am  about.h  configurations.cpp  configurations.h  main.cpp  my_spin_button.h  options.h  secondary_window.cpp  secondary_window.h
source/: about_window.py  color_button.py  data.py  go.py  main.py  options_colors_tab.py  options_general_tab.py  options_window.py  size_grip.py
source/ruler/: main.py  options_window.py
