## Metronome

AC_INIT([screen_ruler], [1.0], [a@b.c],
        [screen_ruler], [https://bitbucket.org/drk4/screen_ruler/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])

PKG_CHECK_MODULES([DEPENDENCIES], [gtkmm-3.0 >= 3.0.0])


CXXFLAGS=-O2


AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
